--- a/application/views/index.html
+++ b/application/views/index.html
@@ -170,7 +170,7 @@
             target: 'map',
             view: new ol.View({
                 projection: 'EPSG:3857',
-                center: ol.proj.([-30,0]),
+                center: ol.proj.fromLonLat([-30,0]),
                 zoom: 2
             })
         });
