--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 #encabezado{
-    background-image: url("fondo%20pantalla.jpg");
+    background-image: url("../../assets/img/fondo%20pantalla.jpg");
     background-position-y: -164px;
 }
 
